5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4015/executions/1662_1391.log
== TEST (2019-04-15 14:14:32) 
-- CODE:
a=float(input("Quantos wats a empresa consumio ?"))
b=(a*0,60)+5
c=(a*0,75)+16
if (a<=150):
	print(b)
else(a>150):
	print(c)
-- ERROR:
File "XXXX", line 6
    else(a>150):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:15:02) 
-- CODE:
a=float(input("Quantos wats a empresa consumio ?"))
b=(a*0,60)+5
c=(a*0,75)+16
if (a<=150):
	print("b")
else(a>150):
	print("c")
-- ERROR:
File "XXXX", line 6
    else(a>150):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:15:56) 
-- CODE:
a=float(input("Quantos wats a empresa consumio ?"))
b=(a*0,60)+5
c=(a*0,75)+16
if (a<=150):
	print("b")
else :
	print("c")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=(a*0,60)+5
TypeError: can only concatenate tuple (not "int") to tuple
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:16:14) 
-- CODE:
a=int(input("Quantos wats a empresa consumio ?"))
b=(a*0,60)+5
c=(a*0,75)+16
if (a<=150):
	print("b")
else :
	print("c")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=(a*0,60)+5
TypeError: can only concatenate tuple (not "int") to tuple
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:16:40) 
-- CODE:
a=int(input("Quantos wats a empresa consumio ?"))
b=a*0,60+5
c=a*0,75+16
if (a<=150):
	print("b")
else :
	print("c")
-- OUTPUT:
b
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:17:14) 
-- CODE:
a=int(input("Quantos wats a empresa consumio ?"))
b=a*0,60+5
c=a*0,75+16
if (a<=150):
	print(b)
else :
	print(c)
-- OUTPUT:
(0, 65)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:17:42) 
-- CODE:
a=float(input("Quantos wats a empresa consumio ?"))
b=a*0,60+5
c=a*0,75+16
if (a<=150):
	print(b)
else :
	print(c)
-- OUTPUT:
(0.0, 65)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:18:11) 
-- CODE:
a=float(input("Quantos wats a empresa consumio ?"))
b=(a*0,60)+5
c=(a*0,75)+16
if (a<=150):
	print(b)
else :
	print(c)
-- EXECUTION TIME:
0.20166
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/1391/main.py", line 2, in <module>
    b=(a*0,60)+5
TypeError: can only concatenate tuple (not "int") to tuple

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:18:12) 
-- CODE:
a=float(input("Quantos wats a empresa consumio ?"))
b=(a*0,60)+5
c=(a*0,75)+16
if (a<=150):
	print(b)
else :
	print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=(a*0,60)+5
TypeError: can only concatenate tuple (not "int") to tuple
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:18:27) 
-- CODE:
a=float(input("Quantos wats a empresa consumio ?"))
b=a*0,60+5
c=a*0,75+16
if (a<=150):
	print(b)
else :
	print(c)
-- OUTPUT:
(0.0, 65)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:27:35) 
-- CODE:
a=float(input("Quantos wats a empresa consumio ?"))
b=a*0.60+5
c=a*0.75+16
if (a<=150):
	print(b)
else :
	print(c)
-- OUTPUT:
90.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:27:40) 
-- CODE:
a=float(input("Quantos wats a empresa consumio ?"))
b=a*0.60+5
c=a*0.75+16
if (a<=150):
	print(b)
else :
	print(c)
-- EXECUTION TIME:
0.177487
-- TEST CASE 1:
---- input:
142
---- correct output:
90.2
---- user output:
90.2
-- TEST CASE 2:
---- input:
250
---- correct output:
203.5
---- user output:
203.5
-- TEST CASE 3:
---- input:
501

---- correct output:
391.75
---- user output:
391.75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
